--- a/index.css
+++ b/index.css
@@ -1,1 +1,6 @@
 @charset "UTF-8";
+
+body{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+}
